style.css
:root {
  --md-ref-typeface-brand: "Roboto";
  --md-ref-typeface-plain: "Roboto";
  --color-hero-gradient-to: #ffb3be;
  --md-ripple-hover-color: var(--md-sys-color-primary);
  --md-ripple-pressed-color: var(--md-sys-color-primary);
  --md-filled-button-disabled-container-color: #eadfe2;
  --md-filled-button-disabled-label-text-color: #8a7d81;
  --md-filled-tonal-button-disabled-container-color: #eadfe2;
  --md-filled-tonal-button-disabled-label-text-color: #8a7d81;
  --md-outlined-button-disabled-label-text-color: #8a7d81;
  --md-outlined-button-disabled-outline-color: #b4a7ab;
  --md-text-button-disabled-label-text-color: #8a7d81;
  --md-elevated-button-disabled-container-color: #f1e5e9;
  --md-elevated-button-disabled-label-text-color: #8a7d81;
  --md-fab-container-color: #f9dce3;
  --md-fab-icon-color: #8f1140;
  --md-fab-branded-container-color: #f9dce3;
}

md-filled-text-field,
md-outlined-text-field,
md-filled-select,
md-outlined-select {
  min-width: 200px;
}

.ripple-demo-surface,
.ripple-demo-icon {
  position: relative;
  overflow: hidden;
  border: none;
  cursor: pointer;
}

.ripple-demo-surface {
  min-width: 180px;
  min-height: 56px;
  padding: 0 24px;
  border-radius: 20px;
  background: var(--md-sys-color-primary-container);
  color: var(--md-sys-color-on-primary-container);
  font-family: var(--md-ref-typeface-plain);
  font-size: var(--md-sys-typescale-label-large-size);
  font-weight: var(--md-sys-typescale-label-large-weight);
  line-height: var(--md-sys-typescale-label-large-line-height);
}

.ripple-demo-icon {
  width: 56px;
  height: 56px;
  border-radius: 9999px;
  background: var(--md-sys-color-surface-variant);
  color: var(--md-sys-color-primary);
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

md-ripple.unbounded {
  border-radius: 50%;
  inset: unset;
  width: 64px;
  height: 64px;
}

